# sqlite-utils-dateutil

./: pyproject.toml  sqlite_utils_dateutil.py
tests/: test_dateutil.py
