[project]
name = "sqlite-utils-dateutil"
version = "0.1"
description = "Date utility functions for sqlite-utils"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "sqlite-utils"
]

[project.urls]
Homepage = "https://github.com/simonw/sqlite-utils-dateutil"
Changelog = "https://github.com/simonw/sqlite-utils-dateutil/releases"
Issues = "https://github.com/simonw/sqlite-utils-dateutil/issues"
CI = "https://github.com/simonw/sqlite-utils-dateutil/actions"

[project.entry-points.sqlite_utils]
dateutil = "sqlite_utils_dateutil"

[project.optional-dependencies]
test = ["pytest"]
